# tic-shell

./: .gitignore  AGENT.md  AGENTS.md  Cargo.toml  Justfile  README.md  flake.nix
crates/agent/: Cargo.toml
crates/agent/src/: lib.rs
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/persistence/: Cargo.toml
crates/persistence/src/: lib.rs
crates/services/: Cargo.toml
crates/services/src/: lib.rs  niri.rs
crates/shell-sidebar/: Cargo.toml
crates/shell-sidebar/src/: lib.rs
crates/sidebar-core/: Cargo.toml
crates/sidebar-core/src/: main.rs
crates/ui/: Cargo.toml
crates/ui/src/: lib.rs
cua/: Cargo.toml  cua-report.html
cua/src/: lib.rs  main.rs
designs/: impact_20260506_agent_sidebar.md  impact_20260511_agent_sidebar_codex_collapse.md  testplan_20260506_agent_sidebar.md  testplan_20260511_agent_sidebar_codex_collapse.md
docs/: agent-chat-web-migration.md  collaboration-v1-progress.md  gpui-rust-shell-plan.md  niri-phase-0-ground-truth.md  noctalia-sidebar-migration-plan.md  rust-daemon-heart-implementation.html
nix/: shell.nix
shell/agent-sidebar/: shell.qml
shell/agent-sidebar/Modules/: AgentPane.qml  WorkspacePane.qml
shell/agent-sidebar/Services/: AgentBridge.qml  WorkspaceService.qml
shell/agent-sidebar/Widgets/: AgentEventBubble.qml  AgentPromptBox.qml  SidebarButton.qml  SlashCommandPopup.qml  WindowRow.qml  WorkspaceCard.qml
shell/noctalia/: flake.nix  shell.qml
shell/noctalia/Assets/: settings-default.json
shell/noctalia/Commons/: Settings.qml  Style.qml
shell/noctalia/Modules/Bar/: Bar.qml
shell/noctalia/Modules/MainScreen/: AllScreens.qml  BarContentWindow.qml  BarExclusionZone.qml  MainScreen.qml  PopupMenuWindow.qml  TicWorkspaceExclusionZone.qml  TicWorkspaceWindow.qml
shell/noctalia/Modules/TicWorkspace/: AgentPane.qml  DebugPane.qml  ForkCursorPrompt.qml  ForkCursorStatusOverlays.qml  TicWorkspacePanel.qml  TicWorkspaceState.qml  WorkspacePane.qml
tests/: tic-codex-agent.test.mjs
tic-daemon/: Cargo.toml
tic-daemon/src/: acp.rs  collab.rs  config.rs  heart.rs  main.rs  mcp.rs  niri.rs  ui.rs
(+21 files in other folders)
