[workspace]
members = [
  "crates/agent",
  "crates/app",
  "crates/persistence",
  "crates/sidebar-core",
  "crates/services",
  "crates/shell-sidebar",
  "crates/ui",
  "cua",
]
resolver = "2"

[workspace.dependencies]
agent = { path = "crates/agent" }
persistence = { path = "crates/persistence" }
sidebar-core = { path = "crates/sidebar-core" }
services = { path = "crates/services" }
shell-sidebar = { path = "crates/shell-sidebar" }
tic-ui = { path = "crates/ui" }

anyhow = "1.0"
gpui = { git = "https://github.com/zed-industries/zed", branch = "main", features = ["wayland"] }
gpui_platform = { git = "https://github.com/zed-industries/zed", branch = "main", features = ["wayland"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.44", features = ["io-std", "io-util", "macros", "net", "process", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
