[package]
name = "tic-daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
ashpd = { version = "0.13.11", features = ["screencast", "tokio"] }
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
cua = { path = "../cua" }
image = "0.25"
img_hash = "3.2"
libc = "0.2"
pathdiff = "0.2"
rmcp = { version = "1.7", features = ["server", "transport-io"] }
schemars = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
toml = "0.8"
