[package]
name = "tic-shell-app"
version = "0.1.0"
edition = "2024"

[dependencies]
agent.workspace = true
anyhow.workspace = true
gpui.workspace = true
gpui_platform.workspace = true
persistence.workspace = true
shell-sidebar.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
